<resources>
    <string name="app_name">热我</string>

    <string name="tab_home">设备&amp;录制</string>
    <string name="tab_icloud">云存储</string>
    <string name="tab_live">直播</string>
    <string name="tab_me">我的</string>

    <string name="welcome_to_use">欢迎使用</string>
    <string name="permission_dialog_title">热我相机需要您授权以下权限</string>

    <string name="home_title">我的热我相机</string>
    <string name="home_camera_tip">如何使用热我></string>
    <string name="home_camera_no_found">没有找到相机</string>

    <string name="bluetooth_no_open">蓝牙未打开</string>
    <string name="bluetooth_tips">要找到热我相机，点击进入手机设置并启用蓝牙</string>
    <string name="bluetooth_setting">设置</string>
    <string name="setting">设置</string>

    <string name="bluetooth_device_list_title">选择相机</string>
    <string name="bluetooth_device_list_refresh">刷新</string>
    <string name="bluetooth_device_list_connect">连接相机</string>
    <string name="bluetooth_device_list_connected">已连接</string>

    <string name="home_top_video">精彩视频</string>
    <string name="home_top_video_enter">进入></string>

    <string name="device_online">设备在线</string>
    <string name="device_offline">设备离线</string>
    <string name="device_connect">连接</string>
    <string name="device_add">+添加相机</string>

    <string name="me_title">我的</string>
    <string name="loading">正在加载中</string>
    <string name="loading_fail">加载失败</string>

    <string name="login_error_connect_device">连接异常，请退出重连！</string>
    <string name="login_error_phone_format">手机号码格式不正确！</string>
    <string name="login_error_verify_code_null">验证码不能为空！</string>

    <string name="me_setting_userinfo">个人资料</string>
    <string name="me_setting_contact">联系我们</string>
    <string name="me_setting_account">账号设置</string>

    <string name="nickname">昵称</string>
    <string name="save">保存</string>

    <string name="me_setting_exit">退出登录</string>
    <string name="me_setting_power">开关机</string>
    <string name="me_setting_devices">我的设备</string>
    <string name="me_setting_kuaichuan">相机快传</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="retry">重试</string>
    <string name="play">播放</string>


    <string name="login">登录</string>

    <string name="login_title">登录热我相机</string>

    <string name="mobile">手机号</string>

    <string name="login_hint_input_phone">请输入手机号</string>
    <string name="login_hint_input_sms">请输入验证码</string>
    <string name="login_btn_send_sms">获取验证码</string>
    <string name="login_btn_login">登录&amp;注册</string>
    <string name="login_tip">*未注册过的手机号将自动创建新账号</string>

    <string name="mobile_btn_update">修改手机号</string>


    <string name="remove_device_dialog_title">确定删除当前相机</string>
    <string name="remove_device_dialog_confirm">删除</string>
    <string name="remove_device_dialog_cancel">取消</string>

    <string name="loading_dialog_search_device">正在查找相机</string>

    <string name="loading_dialog_connect_device">正在连接相机</string>
    <string name="loading_dialog_connect_camera_image">正在连接相机画面</string>
    <string name="loading_dialog_load_device_info">正在获取相机设备信息</string>
    <string name="loading_dialog_load_device_network">正在获取相机网络信息</string>

    <string name="loading_dialog_device_not_found">设备未找到</string>
    <string name="loading_dialog_device_message">请打开或重启相机</string>
    <string name="loading_dialog_cancel">取消</string>
    <string name="loading_dialog_refresh">刷新</string>


    <string name="feedback_hint">请写下您的意见...</string>

    <string name="toast_clear_up">缓存清除完毕</string>
    <string name="toast_begin_to_clear_up">开始清除</string>
    <string name="from_album">从相册选择</string>
    <string name="from_camera">拍照</string>
    <string name="set_portrait_failed">设置头像失败, 是否重试?</string>

    <string name="title_video_select">选择开始类型</string>
    <string name="info_please_select_mode">请选择模式</string>
    <string name="last_select_mode">上次选择的模式</string>
    <string name="next_step">下一步</string>

    <string name="type_football">足球</string>
    <string name="type_basketball">篮球</string>
    <string name="type_training">训练</string>

    <string name="right_now">立刻开始</string>


    <string name="title_place_select">选择场地类型</string>
    <string name="title_age_select">选择年龄段</string>

    <string name="place_type_0">小型场地5V5</string>
    <string name="place_type_8">小型场地5V5</string>
    <string name="place_type_11">大型场地11V11</string>

    <string name="age_type_forty_low">十四岁以下</string>
    <string name="age_type_forty_over">十四岁以上</string>

    <string name="info_please_select_place">请选择场地</string>
    <string name="info_please_select_age">请选择年龄</string>


    <string name="camera_info_usage_left">还可使用</string>

    <string name="camera_info_energy">电量</string>
    <string name="camera_info_storage">内存</string>
    <string name="camera_info_temp">温度</string>

    <string name="info_network_error_not_open">网络未打开</string>

    <string name="info_network_error_open_network">请打开蜂窝网络或无线局域网</string>


    <string name="info_ble_connect_timeout">连接超时</string>
    <string name="info_ble_connect_fail">连接失败</string>
    <string name="info_ble_disconnect">连接断开</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="video_gallery">精彩集锦</string>
    <string name="normal_video">正常回放</string>


    <string name="player_title">热我AI相机</string>
    <string name="player_local_video">本地视频</string>
    <string name="player_setting">相机设置</string>
    <string name="player_energy">电量</string>
    <string name="player_storage">存储</string>
    <string name="player_exit">退出录制界面</string>

    <string name="active_device_list_title">热我相机列表</string>
    <string name="active_device_setup_wifi">请为相机配置一个网络</string>
    <string name="setup_wifi">相机网络设置</string>
    <string name="device_connect_success">设备连接成功</string>
    <string name="device_network_setup_success">设备网络配置成功</string>
    <string name="device_active_nextstep">下一步激活相机</string>
    <string name="device_active">相机激活</string>
    <string name="device_bind">绑定相机</string>
    <string name="device_bind_success">相机绑定成功</string>
    <string name="device_bind_fail">相机绑定失败</string>
    <string name="right_now_to_home">即将进入主页面</string>
    <string name="device_active_success">相机激活成功</string>


    <string name="right_now_to_login">即将进入登录页面</string>

    <string name="device_bound">相机已被绑定</string>
    <string name="device_try_another_device">请更换其他设备尝试</string>
    <string name="know">好的</string>

    <string name="active">激活</string>
    <string name="password">密码</string>
    <string name="wifi_join">加入</string>
    <string name="wifi_open">开启</string>

    <string name="disconnect">断开连接</string>
    <string name="confirm_device_disconnect">断开设备连接</string>
    <string name="my_devices">我的设备</string>
    <string name="reconnect_on_connect_fail">连接失败，请重试</string>
    <string name="info_device_exit">退出相机</string>
    <string name="info_device_power_off">相机断电，正在关机</string>

    <string name="device_on">开机</string>

    <string name="device_off">关机</string>
    <string name="exit">退出</string>

    <string name="active_camera_info_title">相机设置</string>
    <string name="camera_running_info_title">相机运行详情</string>
    <string name="camera_soft_ap_setting">相机热点设置</string>
    <string name="camera_about">关于本机</string>

    <string name="device_launch_success">相机已启动</string>
    <string name="device_power_off_success">相机已关机</string>
    <string name="record_restart">重新启动</string>

    <string name="record_status">相机正在同步录像状态</string>
    <string name="record_launching">相机正在开启录像</string>
    <string name="record_ending">相机正在停止录像</string>


    <string name="wifi_soft_ap_join_title">是否加入热我相机的无线网络</string>

    <string name="info_nickname_is_null">请输入昵称</string>
    <string name="info_nickname_update_suc">更改成功</string>

    <string name="update_dev_name_title">更改相机名称</string>
    <string name="info_input_device_name">请输入设备名称</string>
    <string name="info_update_dev_name_suc">修改成功，断开连接，重启生效</string>

    <string name="info_device_name_the_same_as_device">设备名称相同，无须重复提交</string>

    <string name="device_unbind_title">解绑设备</string>
    <string name="device_unbind">解绑设备</string>
    <string name="device_no_bind">暂无绑定设备</string>

    <string name="device_name">设备名称</string>

    <string name="request_timeout"> 请求超时</string>

    <string name="live_start">开始直播</string>
    <string name="live_end">停止直播</string>

    <string name="video_list_empty">暂无视频</string>

    <string name="video_tab_download">下载</string>
    <string name="video_tab_share">分享</string>
    <string name="video_tab_upload">上传</string>
    <string name="video_tab_rename">重命名</string>
    <string name="video_tab_delete">删除</string>


    <string name="address">北京: 北京市朝阳区望京SOHO塔1C座1005\n深圳: 广东省深圳市龙华区腾龙路龙光玖钻2B座3203\n武汉: 武汉市洪山区野芷湖西路16号创意天地7号工坊103</string>

    <string name="camera_video_transfer">相机视频快传</string>
    <string name="camera_wifi_soft_ap_setting">相机热点设置</string>
    <string name="soft_ap_hint_input_ssid">请输入热点名称</string>
    <string name="soft_ap_hint_input_password">请输入热点密码</string>

    <string name="soft_ap_set_up">开启相机热点</string>

    <string name="info_soft_ap_ssid_is_empty">wifi热点名称不能为空</string>
    <string name="info_soft_ap_password_is_empty">wifi密码不能为空</string>
    <string name="info_soft_ap_setup_fail">创建热点失败</string>
    <string name="info_soft_ap_close">正在关闭热点</string>

    <string name="info_current_mobile_can_login">当前手机号（可用于登录）</string>

    <string name="info_delete_account">注销后，将无法使用当前账号</string>
    <string name="info_delete_account_result">请了解以下注销影响:</string>
    <string name="info_clear_account_info">清空账号信息</string>
    <string name="info_clear_icloud_video">云存储视频清空</string>

    <string name="delete_account">注销账户</string>
    <string name="apply_delete_account">申请注销</string>
    <string name="delete_account_success">账户已注销</string>
    <string name="select_network">请选择网络</string>

    <!-- 新增 -->
    <string name="ly_me_info">个人资料</string>
    <string name="ly_me_photo_set">相机功能设置</string>
    <string name="ly_me_photo_net">相机网络设置</string>
    <string name="ly_me_live">直播管理</string>
    <string name="ly_me_setting">设置</string>

    <string name="ly_push_jieshuo">是否打开麦克风配合解说</string>
    <string name="ly_push_curname">当前相机</string>
    <string name="ly_push_address">请输入推流地址</string>
    <string name="ly_push_tips">如何获取？</string>
    <string name="ly_push_mishi">推流密匙（非必填）</string>
    <string name="btn_confirm">确定</string>
    <string name="out_sys_mg">是否退出登录</string>
    <string name="update_txt">立即更新</string>
    <string name="user_proment">用户协议</string>
    <string name="user_agreement">隐私政策</string>
    <string name="sys_error">系统繁忙请稍后再试</string>

</resources>