<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clipChildren="false"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E7EAEF" />

        <com.xh.hotme.widget.MyRadioGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tab_home"
                style="@style/tabButtonStyle"
                android:drawableTop="@drawable/tab_home"
                android:text="@string/tab_home" />

            <RadioButton
                android:id="@+id/tab_icloud"
                style="@style/tabButtonStyle"
                android:drawableTop="@drawable/tab_icloud"
                android:text="@string/tab_icloud"  />

            <RadioButton
                android:id="@+id/tab_live"
                style="@style/tabButtonStyle"
                android:drawableTop="@drawable/tab_live"
                android:text="@string/tab_live"/>

            <RadioButton
                android:id="@+id/tab_me"
                style="@style/tabButtonStyle"
                android:drawableTop="@drawable/tab_me"
                android:text="@string/tab_me"  />


        </com.xh.hotme.widget.MyRadioGroup>
    </LinearLayout>
</LinearLayout>
