<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluetooth_dialog_open_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff3D3D3D"
            android:textFontWeight="400"
            android:textSize="20sp"
            tools:text="@string/bluetooth_no_open"/>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/dialog_close" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="#ff3D3D3D"
            android:textFontWeight="400"
            android:textSize="20sp"
            android:text="@string/title_place_select"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="#ff3D3D3D"
            android:textFontWeight="400"
            android:textSize="20sp"
            android:text="@string/title_age_select"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />


    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bluetooth_dialog_open_btn"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="#FFFFFF"
        android:textFontWeight="400"
        android:textSize="20sp" />

</LinearLayout>