<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    android:orientation="vertical">

    <include layout="@layout/common_include_header" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@mipmap/weewa_logo2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/device_status" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/device_connect_success"
            android:textColor="#ff272727"
            android:textFontWeight="500"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="42dp"
        android:gravity="center"
        android:text="@string/bluetooth_tips"
        android:textColor="#ff272727"
        android:textFontWeight="400"
        android:textSize="16sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bluetooth_dialog_open_btn"
        android:gravity="center"
        android:text="@string/bluetooth_setting"
        android:textColor="#FFFFFF"
        android:textFontWeight="400"
        android:textSize="20sp" />

</LinearLayout>
